--- a/aosmusic.html
+++ b/aosmusic.html
@@ -46,9 +46,9 @@
 <audio controls>
 <source src="Aosmusic/Jooky.mp3" type"audio/mp3>
 </audio>
-
 <font color="white" size="2">открытие музыкального портала!</font>
-
+<br>
+<a href="Aosmusic/Jooky.mp3">кру</a>
 
 
 
