--- a/aosmusic.html
+++ b/aosmusic.html
@@ -44,11 +44,11 @@
 <a href="Aosmusic/thisugne.mp3">e-e-e-XXX-e-e-e</a>
 <br><br>
 <audio controls>
-<source src="Aosmusic/Jooky.mp3" type"audio/mp3>
+<source src="Aosmusic/1.wav" type"audio/wav>
 </audio>
+
 <font color="white" size="2">открытие музыкального портала!</font>
-<br>
-<a href="Aosmusic/Jooky.mp3">кру</a>
+
 
 
 
